# md-hotpath-assignment

./: AGENTS.md  AGENT_LOG.md  AGENT_USAGE.md  Cargo.toml  README.md
.cargo/: config.toml
.codex/: hooks.json
.codex/hooks/: post_edit_quality.sh  stop_verification.sh
.github/workflows/: ci.yml
src/: lib.rs  model.rs  service.rs
tests/: correctness.rs  pipeline.rs  stress.rs
